
syntax ="proto3";

option csharp_namespace="Fleet.Transport";

import "google/protobuf/timestamp.proto";

service DocumentManager {
	rpc FindDocument(DocumentRequest) returns (TransportDocumentPayload);
	rpc FindAllDocumentByVehicle(FindDocumentsByVehicleRequest) returns (stream TransportDocumentPayload);
	rpc FindAllDocumentByAssignment(FindAllDocumentByAssignmentRequest) returns (stream TransportDocumentPayload);
	rpc AddDocument(TransportDocumentPayload) returns (TransportDocumentPayload);
	rpc DeleteDocument(DocumentRequest) returns (TransportDocumentPayload);
	rpc UpdateDocument(TransportDocumentPayload) returns (TransportDocumentPayload);

}

enum DocumentType{
    DOCUMENTATION_TYPE_NONE=0;
	REGISTRATION=1;
	INSURANCE=2;
	INSPECTION=3;
}

message DocumentRequest{
	int32 id=1;
}
message FindDocumentsByVehicleRequest{
	int32 vehicle_id=1;
}
message FindAllDocumentByAssignmentRequest{
	int32 assignment_id=1;
}

message TransportDocumentPayload{
	int32 id=1;
	string document_number =2;
	DocumentType type=3;
	google.protobuf.Timestamp expiry_date =4;
	bytes file_content =5;
    int32 vehicle_id=6;
	int32 assignment_id=7;
}
